# polyrhythmix

./: Cargo.toml  README.MD  README.md
doc/: bleed.mid
src/: lib.rs
src/dsl/: dsl.rs  mod.rs  process.rs
src/midi/: core.rs  mod.rs  time.rs
