[package]
name = "poly"
description = "Polyrhythmically-inclinded Midi Drum generator"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "poly"
path = "src/bin/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "*"
midly = "0.5.3"
derive_more = "*"
clap = { version = "4.2.7", features = ["derive"] }
dyn-clone = "1.0.11"